[tool.poetry]
name = "ethereal"
version = "0.1.1"
description = "Ergonomic python tooling for web3"
authors = ["Alex Euler <0xalexeuler@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.1.0"
dependency-injector = "^4.41.0"
click = "^8.1.3"
PyYAML = "^6.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.3.0"
jupyterlab = "^3.6.3"
pylint = "^2.17.2"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
